<resources>
    <string name="app_name">Anime Song Trivia</string>
    <string name="play_button">Play</string>
    <string name="congratulations_text">Congratulations!</string>
    <string name="menu_button">Back To Menu</string>
    <string name="app_title">Anime Song Trivia</string>
    <string name="link"><a href="http://openings.moe">Anime Songs taken from Openings.moe</a></string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_visible_mode">Show Song Video</string>
    <string name="pref_visible_mode_desc">Whether the video for the song is displayed or not</string>


    <string name="pref_endless_mode">Endless Mode</string>
    <string name="pref_endless_mode_desc">Guess Songs forever</string>

    <string name="settings">Settings</string>
    <string name ="pref_header_gameplay">Gameplay</string>
    <string name="lives_mode">Mode: Survival</string>
    <string name="songs_played">Songs Played: 0</string>
    <string name="menu">menu</string>
    <string name="quit">Quit</string>
    <string name="details">details</string>

    <string name="lives">lives: ?</string>
    <string name="score">score: 0</string>
    <string name="next_song">Next Song</string>
    <string name="timer_text_default">Time: Unlimited</string>


    <string-array name="guess_time_limit">
        <item>None</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>25 seconds</item>
        <item>30 seconds</item>
    </string-array>

    <string-array name="guess_time_limit_values">
        <item>0</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

</resources>
