<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="visible_mode_switch"
        android:summary="@string/pref_visible_mode_desc"
        android:title="@string/pref_visible_mode" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="endless_mode_switch"
        android:summary="@string/pref_endless_mode_desc"
        android:title="@string/pref_endless_mode" />

    <ListPreference
        android:key="guess_time_preference"
        android:title="Guessing Time Limit"
        android:entries="@array/guess_time_limit"
        android:entryValues="@array/guess_time_limit_values"
        android:summary="Time limit to guess the song: %s"
        android:defaultValue="0"/>


</PreferenceScreen>
